# Polars.jl

./: .gitignore  Cargo.toml  JuliaProject.toml  pyproject.toml
polars-jll/: Cargo.toml
polars-jll/src/: columns.rs  errors.rs  frames.rs  lib.rs  utils.rs  value_types.rs  values.rs
scripts/: test.py
src/: Polars.jl  datatype.jl  ffi.jl
test/: runtests.jl
