[package]
name = "polars-jll"
version = "0.1.0"
edition = "2024"

[lib]
name = "polars"
crate-type = ["cdylib"]

[dependencies]
jlrs = { git = "https://github.com/Taaitaaiger/jlrs", features = ["jlrs-derive", "ccall"] }
polars = { version = "0.50.0", features = ["lazy", "parquet", "dtype-array", "dtype-datetime", "dtype-duration", "dtype-struct", "dtype-categorical"] }
